fix alignment of elements on home page, remove border from elements, add bottom border, change order of elements on individual question page, hide answer header if no answers, change names of buttons

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -75,7 +75,7 @@ navbar {
   margin-bottom: .5em;
   padding: 15px;
   text-decoration: none;
-  border: 1px solid black;
+  /*border: 1px solid black;*/
 }
 
 .questions-container a {color: black;}
@@ -112,7 +112,7 @@ form.button_to {
 
 .data-display-container {
   display: inline-block;
-  border: 1px solid black;
+  /*border: 1px solid black;*/
   float: left;
 }
 
@@ -167,7 +167,7 @@ form.button_to {
 }
 
 .user-notice {
-  text-align: center;
+  text-align: left;
   padding: 1em;
   margin-top: 1.2em;
 }
@@ -219,11 +219,12 @@ form.button_to {
 
 
 .tags-container {
-  display: inline-block;
-  text-align: left;
-  padding: 1em;
-  margin-left: 10%;
-  margin-right: 10%;
+  /*display: inline-block;*/
+  float: left;
+  /*text-align: left;*/
+  padding: .8em;
+  /*margin-left: 10%;*/
+  /*margin-right: 10%;*/
   margin-bottom: .5em;
 }
 
@@ -235,6 +236,8 @@ form.button_to {
   padding: 15px;
   text-decoration: none;
 }
+
+.answer-button {float: left; margin-left: 10%;}
 
 .response { background-color: #fffbea; padding: .7em; }
 .response a { color: black; }
@@ -266,25 +269,30 @@ p.answer {
 
 }
 .dates {
-  float: right;
-  text-align: right;
+  float: left;
+  text-align: left;
   font-size: .7em;
   color: gray;
-  border: 1px solid black  ;
-  display: inline-block;
+  /*border: 1px solid black;*/
+  /*display: block;*/
 }
 
 .question-summary {
-  border-bottom: 1px solid gray;
-  width: 100em;
+  /*border-bottom: 1px solid gray;*/
+  width: auto;
   height: -1em;
+  border-bottom: 1px solid black;
 }
 
-.summary { display: inline-block; padding: 1em; clear: left;}
+.summary {
+  display: inline-block;
+  padding: .5em;
+  clear: left;
+}
 
 .index-text {
-  text-align: right;
-  border: 1px solid black;
+  /*text-align: right;*/
+  /*border: 1px solid black;*/
   display: inline-block;
 }
 
@@ -301,7 +309,13 @@ p.answer {
 
 .nav-link:hover {background-color: orange;}
 
-.question-link {display: inline-block; float: right;}
+.question-link {
+  display: inline-block;
+  float: left;
+  text-align: left;
+  margin-top: .1em;
+  margin-bottom: .1em;
+}
 
 .profile-link {
   text-decoration: none;
@@ -309,3 +323,5 @@ p.answer {
 }
 
 .container {display: inline-block;}
+
+.question-text {text-align: left; padding: 1em;}
